--- a/app/views/static_page/_indexraw2.html.erb
+++ b/app/views/static_page/_indexraw2.html.erb
@@ -1,77 +1,61 @@
 <div class="row">
-            <div class="col-lg-8">
-                <div class="card oh">
-                    <div class="card-body">
-                        <div class="d-flex m-b-30 align-items-center no-block">
-                            <h5 class="card-title ">Yearly Sales</h5>
-                            <div class="ml-auto">
-                                <ul class="list-inline font-12">
-                                    <li><i class="fa fa-circle text-info"></i> Iphone</li>
-                                    <li><i class="fa fa-circle text-primary"></i> Ipad</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div id="morris-area-chart" style="height: 350px;"></div>
-                    </div>
-                    <div class="card-body bg-light">
-                        <div class="row text-center m-b-20">
-                            <div class="col-lg-4 col-md-4 m-t-20">
-                                <h2 class="m-b-0 font-light">6000</h2><span class="text-muted">Total sale</span>
-                            </div>
-                            <div class="col-lg-4 col-md-4 m-t-20">
-                                <h2 class="m-b-0 font-light">4000</h2><span class="text-muted">Iphone</span>
-                            </div>
-                            <div class="col-lg-4 col-md-4 m-t-20">
-                                <h2 class="m-b-0 font-light">2000</h2><span class="text-muted">Ipad</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Today's Schedule</h5>
-                        <h6 class="card-subtitle">check out your daily schedule</h6>
-                        <div class="steamline m-t-40">
-                            <div class="sl-item">
-                                <div class="sl-left bg-success"> <i class="ti-user"></i></div>
-                                <div class="sl-right">
-                                    <div class="font-medium">Meeting today <span class="sl-date"> 5pm</span></div>
-                                    <div class="desc">you can write anything </div>
-                                </div>
-                            </div>
-                            <div class="sl-item">
-                                <div class="sl-left bg-info"><i class="fa fa-image"></i></div>
-                                <div class="sl-right">
-                                    <div class="font-medium">Send documents to Clark</div>
-                                    <div class="desc">Lorem Ipsum is simply </div>
-                                </div>
-                            </div>
-                            <div class="sl-item">
-                                <div class="sl-left"> <img class="img-circle" alt="user" src=""> </div>
-                                <div class="sl-right">
-                                    <div class="font-medium">John Doe <span class="sl-date"> 5pm</span></div>
-                                    <div class="desc">Call today with gohn doe </div>
-                                </div>
-                            </div>
-                            <div class="sl-item">
-                                <div class="sl-left"> <img class="img-circle" alt="user" src=""> </div>
-                                <div class="sl-right">
-                                    <div class="font-medium">Go to the Doctor <span class="sl-date">5 minutes ago</span></div>
-                                    <div class="desc">Contrary to popular belief</div>
-                                </div>
-                            </div>
-                            <div class="sl-item">
-                                <div class="sl-left"> <img class="img-circle" alt="user" src=""> </div>
-                                <div class="sl-right">
-                                    <div><a href="#">Tiger Sroff</a> <span class="sl-date">5 minutes ago</span></div>
-                                    <div class="desc">Approve meeting with tiger
-                                        <br><a href="javascript:void(0)" class="btn m-t-10 m-r-5 btn-rounded btn-outline-success">Apporve</a> <a href="javascript:void(0)" class="btn m-t-10 btn-rounded btn-outline-danger">Refuse</a> </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="col-lg-6">
+    <div class="card oh">
+      <div class="card-body">
+        <h5 class="card-title">Top Budget Projects</h5>
+        <table id="example23" class="display nowrap table color-table warning-table" cellspacing="0" width="100%">
+          <thead>
+            <tr>
+              <th>Project</th>
+              <th>Budget</th>
+              <th>Client</th>
+              <th>Technologies</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% top_budget_project&.each do |project| %>
+              <tr>
+                <td><%= project&.project_name %></td>
+                <td><%= project&.price.format %></td>
+                <td><%= project&.client&.client_name %></td>
+                <td><% project&.technologies.each do |technology| %>
+                  <span class="label label-inverse"><%= technology&.name%></span><br>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Recent Projects</h5>
+        <table id="example23" class="display nowrap table color-table warning-table" cellspacing="0" width="100%">
+          <thead>
+            <tr>
+              <th>Project</th>
+              <th>PM</th>
+              <th>Technologies</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% project_list&.each do |project| %>
+              <tr>
+                <td><%= project&.project_name %></td>
+                <td><%= find_employee(project) %></td>
+                <!-- label label-info -->
+                <td><% project&.technologies.each do |technology| %>
+                  <span class="label label-inverse"><%= technology&.name%></span><br>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
