--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -41,3 +41,9 @@
 	</div>
 </div>
 
+<div class="form-group m-t-40 row">
+	<%= f.label :is_primary, class: "col-2 col-form-label" %>
+	<div class="col-10">
+		<%= f.check_box :is_primary, class: "form-control"%>
+	</div>
+</div>
