--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -5,6 +5,7 @@
         <div class="card-body">
           <h4 class="card-title">Employee List</h4>
 					<div class="table-responsive m-t-40">
+						<div id="myTable" class="dataTables_wrapper no-footer">
 					  <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
 					  	<thead>
 						    <tr>
@@ -13,6 +14,7 @@
 						        <th>Username</th>
 						        <th>Primary Technology</th>
 						        <th>Secondary Technology</th>
+						        <th>Is Primary</th>
 						        <th>Role</th>
 						        <th>Change Role</th>
 						        <th>Action</th>
@@ -26,6 +28,9 @@
 						        <td><%= employee&.username %></td>
 						        <td><%= employee&.primary_technology %></td>
 						        <td><%= employee&.secondary_technology %></td>
+						        <td>
+						        	<%= employee&.is_primary.present? ? 'Yes' : 'No' %>
+						        </td>
 						        <td id="employee-role-<%= employee&.id%>"><%= employee&.roles&.first&.name %></td>
 						        <td>
 						        		<%= select_tag "role",options_for_select(@roles.map{|role| [role&.name,role&.id]}, selected: employee&.roles&.first&.id),id: "select-#{employee&.id}", data: { value: "#{employee&.id}"} %>
@@ -44,6 +49,7 @@
 								<% end %>
 							</tbody>
 						</table>
+					</div>
 					</div>
 				</div>
 			</div>
