--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -5,10 +5,10 @@
         <p class="loader__label">Elegant admin</p>
     </div>
 </div> -->
-
+<script src="chartkick.js"></script>
   <!-- End Bread crumb and right sidebar toggle -->
   <%= render partial: 'indexraw1'%> <!-- Row1 -->
-  <%= render partial: 'indexraw2'%> <!-- Row2 -->
+  <%= render partial: 'indexraw2', locals: {project_list: @project_list, top_budget_project: @top_budget_project}%> <!-- Row2 -->
   <%= render partial: 'indexraw3'%> <!-- Row3 -->
 
   <!-- Right sidebar -->
