--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,47 +1,51 @@
 <%= javascript_include_tag "rails" %>
-<div class="row">
-	<div class="col-12">
-	  <div class="card">
-	    <div class="card-body">
-				<div class="table-responsive m-t-40">
-
-				  <table id="example23" class="desk-table display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-				  	<thead>
-					    <tr>
-				        <th>Name</th>
-				        <th>Email</th>
-				        <th>Contact</th>
-				        <th>Country</th>
-				        <th>Actions</th>
-					    </tr>
-						</thead>
-						<tbody>
-							<% @clients&.each do |client| %>
-								<tr>
-					        <td><%= client&.client_name %></td>
-					        <td><%= client&.client_email %></td>
-					        <td><%= client&.client_contact %></td>
-					        <td><%= client&.country %></td>
-					        <td>
-					        	<%= link_to client_path(client),remote: true do %> 
-					        		<i class="fa fa-eye icon-color-size" data-toggle="tooltip" data-placement="top" title="Show"></i>   
-					        	<% end %>
-					        	<%= link_to edit_client_path(client) do %> 
-					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>   
-					        	<% end %>
-					        	<%= link_to client_path(client), method: :delete, data: {confirm: 'Are you sure? '} do %> 
-					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
-					        	<% end %>
-					        </td>
-					    	</tr>
-							<% end %>
-						</tbody>
-					</table>
+  <%#
+  Filterrific adds the `form_for_filterrific` view helper:
+  * adds dom id 'filterrific_filter'
+  * applies javascript behaviors:
+      * AJAX form submission on change
+      * AJAX spinner while AJAX request is being processed
+  * sets form_for options like :url, :method and input name prefix
+%>
+<%= form_for_filterrific @filterrific, html: { id: 'filterrific-no-ajax-auto-submit' } do |f| %>
+  <div class="row">
+    <div class="col-lg-3">
+      <div class="card">
+        <div class="card-body">
+		      Email
+		      <%# give the search field the 'filterrific-periodically-observed' class for live updates %>
+		      <%= f.text_field(
+		        :search_by_client_email,
+		        class: 'filterrific-periodically-observed'
+		      ) %>
+		    </div>
+		  </div>
+		</div>
+    <div class="col-lg-3">
+      <div class="card">
+        <div class="card-body">
+		    	Country
+		    	<%= f.country_select :search_by_country, { include_blank: 'Select a country' }, { class: 'country-select-box select2 form-control custom-select' } %>
+		    </div>
+		  </div>
+		</div>
+    <div class="col-lg-3">
+      <div class="card">
+        <div class="card-body">
+		      <%= link_to(
+		        'Reset filters',
+		        reset_filterrific_url,
+		      ) %>
+		     
+				  <%# add an automated spinner to your form when the list is refreshed %>
+				  <%= render_filterrific_spinner %>
+				  <%= f.submit 'Filter' %>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+<% end %>
 
-<div class="modal" style="display:none;">
-</div>
+<%= render partial: 'clients/client_list', locals: { clients: @clients }
+ %>
+ 
