Leave list module

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -37,9 +37,9 @@
 	  <div class="col-lg-3">
 	  	<div class="card">
 		    <div class="card-body">
-			    <%= link_to('Reset filters',reset_filterrific_url ) %>
+			    <%= link_to('Reset filters',reset_filterrific_url ) %><br>
 				  <%= render_filterrific_spinner %>
-				  <%= f.submit 'Filter' %>
+				  <%= f.submit 'Filter',class: "btn btn-default waves-effect waves-light m-r-10" %>
 				</div>
 			</div>
 		</div>
