--- a/app/views/assignments/_assignment_list.html.erb
+++ b/app/views/assignments/_assignment_list.html.erb
@@ -8,8 +8,6 @@
 				  	<thead>
 					    <tr>
 				        <th>Project</th>
-				        <th>Start Date</th>
-				        <th>End Date</th>
 				        <th>Employees</th>
 				        <th>Client</th>
 				        <th>Technologies</th>
@@ -20,8 +18,6 @@
 							<% assignments&.each do |assignment| %>
 								<tr>
 					        <td><%= assignment&.project&.project_name %></td>
-					        <td><%= assignment&.start_date %></td>
-					        <td><%= assignment&.end_date %></td>
 					        <td><% assignment&.employees.each do |employee| %>
 					        	<span class="label bg-orange"><%= employee&.username %></span><br>
 					        	<% end %>
@@ -55,4 +51,5 @@
 </div>
 <%= will_paginate assignments %>
 
-<div class="modal"></div>
+<div class="modal" style="display:none;">
+</div>
