--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -45,11 +45,11 @@
 		      <%= link_to(
 		        'Reset filters',
 		        reset_filterrific_url,
-		      ) %>
+		      ) %><br>
 		     
 				  <%# add an automated spinner to your form when the list is refreshed %>
 				  <%= render_filterrific_spinner %>
-				  <%= f.submit 'Filter' %>
+				  <%= f.submit 'Filter',class: "btn btn-default waves-effect waves-light m-r-10" %>
 				</div>
 			</div>
 		</div>
