--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -12,11 +12,11 @@
     <div class="col-lg-3">
       <div class="card">
         <div class="card-body">
-          Email
+          Email<br>
           <%# give the search field the 'filterrific-periodically-observed' class for live updates %>
           <%= f.text_field(
             :search_by_email,
-            class: 'filterrific-periodically-observed'
+            class: 'filterrific-periodically-observed form-control'
           ) %>
         </div>
       </div>
@@ -35,16 +35,10 @@
           <%= link_to(
             'Reset filters',
             reset_filterrific_url,
-          ) %>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3">
-      <div class="card">
-        <div class="card-body">  
+          ) %><br>
     <%# add an automated spinner to your form when the list is refreshed %>
           <%= render_filterrific_spinner %>
-          <%= f.submit 'Filter' %>
+          <%= f.submit 'Filter',class: "btn btn-default waves-effect waves-light m-r-10" %>
         </div>
       </div>
     </div>
