--- a/app/views/leave_lists/index.html.erb
+++ b/app/views/leave_lists/index.html.erb
@@ -1,2 +1,35 @@
-<h1>LeaveLists#index</h1>
-<p>Find me in app/views/leave_lists/index.html.erb</p>
+  <%= javascript_include_tag "rails" %>
+  <%#
+  Filterrific adds the `form_for_filterrific` view helper:
+  * adds dom id 'filterrific_filter'
+  * applies javascript behaviors:
+      * AJAX form submission on change
+      * AJAX spinner while AJAX request is being processed
+  * sets form_for options like :url, :method and input name prefix
+%>
+<%= form_for_filterrific @filterrific, html: { id: 'filterrific-no-ajax-auto-submit' } do |f| %>
+<div class="row">
+	  <div class="col-lg-3">
+      <div class="card">
+		    <div class="card-body">
+			    Employee
+			    <%# give the search field the 'filterrific-periodically-observed' class for live updates %>
+			    <%= f.select :search_by_employee, Employee.all.collect { |employee| [ employee&.username, employee&.id ] }, {include_blank: "select"}, {class: "select2 form-control custom-select"} %>
+				  </div>
+				</div>
+	  </div>
+	  <div class="col-lg-3">
+	  	<div class="card">
+		    <div class="card-body">
+			    <%= link_to('Reset filters',reset_filterrific_url ) %><br>
+				  <%= render_filterrific_spinner %>
+				  <%= f.submit 'Filter',class: "btn btn-default waves-effect waves-light m-r-10" %>
+				</div>
+			</div>
+		</div>
+	</div>
+<% end %>
+
+<%= render partial: 'leave_lists/leave_list', locals: { leave_lists: @leave_lists }
+ %>
+ 
