--- a/app/views/static_page/_header.html.erb
+++ b/app/views/static_page/_header.html.erb
@@ -2,9 +2,9 @@
   <nav class="navbar top-navbar navbar-expand-md navbar-dark bg-orange">
     <!-- Logo -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <%= link_to root_path, class: "navbar-brand" do %>
         <b><%= image_tag('bacancy_logo')%></b>
-      </a>
+      <% end %>
     </div>
     <!-- End Logo -->
     <div class="navbar-collapse">
