--- a/app/views/assignments/_show_assignments.html.erb
+++ b/app/views/assignments/_show_assignments.html.erb
@@ -1,38 +1,40 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h4 class="modal-title">Project Detail</h4>
+      <h4 class="modal-title">Project-Employee Detail</h4>
       <button type="button" class="close" data-dismiss="modal">&times;</button>
     </div>
     <div class="modal-body">
 
       <div class="card oh">
         <div class="card-body">
-          <h5 class="card-title"><%= project&.project_name %> Project</h5>
+          <h5 class="card-title"><%= assignment&.project&.project_name %> Project</h5>
           <table id="example23" class="display nowrap table color-table inverse-table" cellspacing="0" width="100%">
             <tr>
               <td>Start Date</td>
-              <td><%= project&.start_date%></td>
+              <td><%= assignment&.start_date%></td>
             </tr>
             <tr>
               <td>End Date</td>
-              <td><%= project&.end_date%></td>
+              <td><%= assignment&.end_date%></td>
             </tr>
             <tr>
-              <td>Project Manager</td>
-              <td><%= find_employee(project) %></td>
+              <td>Employees</td>
+              <td><% assignment&.employees.each do |employee| %>
+                    <span class="label bg-orange"><%= employee&.username %></span><br>
+                  <% end %>
+              </td>
             </tr>
             <tr>
-              <td>Budget</td>
-              <td><%= project&.price.format %></td>
+              <td>Technologies</td>
+              <td><% assignment&.project.technologies.each do |technology| %>
+                <span class="label label-inverse"><%= technology&.name %></span><br>
+                <% end %>
+              </td>
             </tr>
             <tr>
               <td>Client</td>
-              <td><%= project&.client&.client_name %></td>
-            </tr>
-            <tr>
-              <td>Rough Order Magnitute</td>
-              <td><%= project&.rough_order_magnitude%></td>
+              <td><%= assignment&.project&.client&.client_name %></td>
             </tr>
           </table>
         </div>
