--- a/app/views/employees/_employee_list.html.erb
+++ b/app/views/employees/_employee_list.html.erb
@@ -18,25 +18,9 @@
 							</thead>
 							<tbody>
 								<% employees&.each do |employee| %>
-									<tr>
-						        <td><%= employee&.email %></td>
-						        <td><%= employee&.first_name %> <%= employee&.last_name %></td>
-						        <td><%= employee&.username %></td>
-						        <td id="employee-role-<%= employee&.id%>"><%= employee&.roles&.first&.name %></td>
-						        <td>
-						        		<%= select_tag "role",options_for_select(@roles.map{|role| [role&.name,role&.id]}, selected: employee&.roles&.first&.id),id: "select-#{employee&.id}", data: { value: "#{employee&.id}"} %>
-						        		<%= button_tag "Change Role", class: "btn btn-warning change-employee-role", id: "change_role_btn-#{employee&.id}", data: { value: "#{employee&.id}"}  %>
-						        </td>
-						        <td><%= link_to employee_path(employee),remote: true do %> 
-					        		<i class="fa fa-eye icon-color-size" data-toggle="tooltip" data-placement="top" title="Show"></i>   
-					        	<% end %>
-					        	<%= link_to edit_employee_path(employee) do %> 
-					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>   
-					        	<% end %>
-					        	<%= link_to employee_path(employee), method: :delete, data: {confirm: 'Are you sure? '} do %> 
-					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
-					        	<% end %></td>
-						    	</tr>
+									<div id="employee-data-<%= employee&.id %>">
+										<%= render partial: 'employee_data', locals: {employee: employee} %>
+									</div>
 								<% end %>
 							</tbody>
 						</table>
@@ -53,6 +37,7 @@
 	$(document).on('ready',function(){
 		$(".change-employee-role").on("click", function(){
 			$(this).parent().find('select option:selected').text();
+			debugger;
 				$.ajax({
 	         url: '/change_role.js',
 	         method: 'GET',
