--- a/app/views/leave_lists/_form.html.erb
+++ b/app/views/leave_lists/_form.html.erb
@@ -15,7 +15,7 @@
 <div class="form-group m-t-40 row">
 	<%= f.label :end_date, class: "col-2 col-form-label" %>
 	<div class="col-10">
-		<%= f.date_field :end_date, class: "form-control",placeholder: "End Date", min: Date.today %>
+		<%= f.date_field :end_date, class: "form-control",placeholder: "End Date" %>
 	</div>
 </div>
 
