--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -18,7 +18,7 @@
 <div class="form-group m-t-40 row">
 	<%= f.label :end_date, class: "col-2 col-form-label" %>
 	<div class="col-10">
-		<%= f.date_field :end_date, class: "form-control",placeholder: "End Date", min: Date.today %>
+		<%= f.date_field :end_date, class: "form-control",placeholder: "End Date" %>
 	</div>
 </div>
 
@@ -37,7 +37,7 @@
 </div>
 
 <div class="form-group m-t-40 row">
-	<%= f.label :technology_ids, class: "col-2 col-form-label" %>
+	<%= f.label :technologies, class: "col-2 col-form-label" %>
 	<div class="col-10">
 		<%= f.select :technology_ids, Technology.all.collect { |p| [ p.name, p.id ] }, {include_blank: "select"}, {class: "select2 form-control custom-select js-example-basic-single", multiple: true} %>
 	</div>
