--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -11,8 +11,8 @@
   <!-- End Bread crumb and right sidebar toggle -->
   <%= render partial: 'indexraw1'%> <!-- Row1 -->
   <%= render partial: 'indexraw2', locals: {project_list: @project_list, top_budget_project: @top_budget_project}%> <!-- Row2 -->
-  <%= render partial: 'indexraw3'%> <!-- Row3 -->
+  <%#= render partial: 'indexraw3'%> <!-- Row3 -->
 
   <!-- Right sidebar -->
-  <%= render partial: 'right_sidebar'%>
+  <%#= render partial: 'right_sidebar'%>
   <!-- End Right sidebar -->
