--- a/app/views/static_page/_header.html.erb
+++ b/app/views/static_page/_header.html.erb
@@ -13,11 +13,11 @@
         <!-- This is  -->
         <li class="nav-item d-sm-none"> <a class="nav-link nav-toggler waves-effect waves-light" href="javascript:void(0)"><i class="ti-menu"></i></a></li>
         <!-- Search -->
-        <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
+        <!-- <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
             <form class="app-search">
                 <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"><i class="ti-close"></i></a>
             </form>
-        </li>
+        </li> -->
       </ul>
         <!-- User profile and search -->
       <!-- <ul class="navbar-nav my-lg-0">
@@ -74,7 +74,7 @@
           <i class="fa fa-power-off m-r-5 m-l-5"></i> Logout
         <% end %>
       <% else %>
-        <%= link_to new_employee_session_path, class: 'dropdown-item' do %>
+        <%= button_to new_employee_session_path, class: 'dropdown-item' do %>
           <i class="fa fa-power-off m-r-5 m-l-5"></i> Login
         <% end %>
       <% end %>
