--- a/app/views/projects/_show_projects.html.erb
+++ b/app/views/projects/_show_projects.html.erb
@@ -34,6 +34,16 @@
               <td>Rough Order Magnitute</td>
               <td><%= project&.rough_order_magnitude%></td>
             </tr>
+            <tr>
+              <td>Employees</td>
+              <td>
+                <%@assignments.each do |assignment|%>
+                  <%assignment.employees.each do |employee|%>
+                    <span class="label label-inverse"><%= employee&.first_name %> <%= employee&.last_name %></span>
+                  <%end%>
+                <%end%>
+              </td>
+            </tr>
           </table>
         </div>
       </div>
